--- a/.github/workflows/Main.yml
+++ b/.github/workflows/Main.yml
@@ -381,28 +381,28 @@ jobs:
       if: always() && steps.build.conclusion == 'success'
       shell: bash
       run: |
-        ./build/release/test/unittest --verify-vector=dictionary_expression --skip-compiled
+        ./build/release/test/unittest --verify-vector dictionary_expression --skip-compiled
 
     - name: Test dictionary_operator
       if: always() && steps.build.conclusion == 'success'
       shell: bash
       run: |
-        ./build/release/test/unittest --verify-vector=dictionary_operator --skip-compiled
+        ./build/release/test/unittest --verify-vector dictionary_operator --skip-compiled
 
     - name: Test constant_operator
       if: always() && steps.build.conclusion == 'success'
       shell: bash
       run: |
-        ./build/release/test/unittest --verify-vector=constant_operator --skip-compiled
+        ./build/release/test/unittest --verify-vector constant_operator --skip-compiled
 
     - name: Test sequence_operator
       if: always() && steps.build.conclusion == 'success'
       shell: bash
       run: |
-        ./build/release/test/unittest --verify-vector=sequence_operator --skip-compiled
+        ./build/release/test/unittest --verify-vector sequence_operator --skip-compiled
 
     - name: Test nested_shuffle
       if: always() && steps.build.conclusion == 'success'
       shell: bash
       run: |
-        ./build/release/test/unittest --verify-vector=nested_shuffle --skip-compiled
+        ./build/release/test/unittest --verify-vector nested_shuffle --skip-compiled
