--- a/.github/workflows/Regression.yml
+++ b/.github/workflows/Regression.yml
@@ -17,6 +17,7 @@ on:
       - 'v*.*-*'
     paths-ignore:
       - '**.md'
+      - 'test/configs/**'
       - 'tools/**'
       - '!tools/pythonpkg/**'
       - '.github/patches/duckdb-wasm/**'
@@ -28,6 +29,7 @@ on:
     types: [opened, reopened, ready_for_review]
     paths-ignore:
       - '**.md'
+      - 'test/configs/**'
       - 'tools/**'
       - '!tools/pythonpkg/**'
       - '.github/patches/duckdb-wasm/**'
