--- a/.github/workflows/Main.yml
+++ b/.github/workflows/Main.yml
@@ -348,61 +348,61 @@ jobs:
       run: make
 
     - name: test/configs/encrypted_db.json
-      if: always() && steps.build.conclusion == 'success'
+      if: (success() || failure()) && steps.build.conclusion == 'success'
       shell: bash
       run: |
         ./build/release/test/unittest --test-config test/configs/encrypted_db.json
 
     - name: test/configs/force_storage.json
-      if: always() && steps.build.conclusion == 'success'
+      if: (success() || failure()) && steps.build.conclusion == 'success'
       shell: bash
       run: |
         ./build/release/test/unittest --test-config test/configs/force_storage.json
 
     - name: test/configs/force_storage_restart.json
-      if: always() && steps.build.conclusion == 'success'
+      if: (success() || failure()) && steps.build.conclusion == 'success'
       shell: bash
       run: |
         ./build/release/test/unittest --test-config test/configs/force_storage_restart.json
 
     - name: test/configs/latest_storage.json
-      if: always() && steps.build.conclusion == 'success'
+      if: (success() || failure()) && steps.build.conclusion == 'success'
       shell: bash
       run: |
         ./build/release/test/unittest --test-config test/configs/latest_storage.json
 
     - name: test/configs/prefetch_all_parquet_files.json
-      if: always() && steps.build.conclusion == 'success'
+      if: (success() || failure()) && steps.build.conclusion == 'success'
       shell: bash
       run: |
         ./build/release/test/unittest --test-config test/configs/prefetch_all_parquet_files.json
 
     - name: Test dictionary_expression
-      if: always() && steps.build.conclusion == 'success'
+      if: (success() || failure()) && steps.build.conclusion == 'success'
       shell: bash
       run: |
         ./build/release/test/unittest --verify-vector dictionary_expression --skip-compiled
 
     - name: Test dictionary_operator
-      if: always() && steps.build.conclusion == 'success'
+      if: (success() || failure()) && steps.build.conclusion == 'success'
       shell: bash
       run: |
         ./build/release/test/unittest --verify-vector dictionary_operator --skip-compiled
 
     - name: Test constant_operator
-      if: always() && steps.build.conclusion == 'success'
+      if: (success() || failure()) && steps.build.conclusion == 'success'
       shell: bash
       run: |
         ./build/release/test/unittest --verify-vector constant_operator --skip-compiled
 
     - name: Test sequence_operator
-      if: always() && steps.build.conclusion == 'success'
+      if: (success() || failure()) && steps.build.conclusion == 'success'
       shell: bash
       run: |
         ./build/release/test/unittest --verify-vector sequence_operator --skip-compiled
 
     - name: Test nested_shuffle
-      if: always() && steps.build.conclusion == 'success'
+      if: (success() || failure()) && steps.build.conclusion == 'success'
       shell: bash
       run: |
         ./build/release/test/unittest --verify-vector nested_shuffle --skip-compiled
