--- a/.github/workflows/LinuxRelease.yml
+++ b/.github/workflows/LinuxRelease.yml
@@ -33,7 +33,7 @@ on:
       - '!.github/workflows/LinuxRelease.yml'
   merge_group:
   pull_request:
-    types: [opened, reopened, ready_for_review]
+    types: [opened, reopened, ready_for_review, converted_to_draft]
     paths-ignore:
       - '**.md'
       - 'tools/**'
@@ -52,9 +52,21 @@ env:
   OVERRIDE_GIT_DESCRIBE: ${{ inputs.override_git_describe }}
 
 jobs:
+ check-draft:
+    name: Don't trigger further jobs to run on draft PR
+    runs-on: ubuntu-latest
+    outputs:
+      is_draft: ${{ steps.check-draft.outputs.is_draft }}
+    steps:
+    - id: check-draft
+      run: |
+        echo "is_draft=${{ github.event.pull_request.draft }}" >> $GITHUB_OUTPUT
+
  linux-release-cli:
-    needs: linux-extensions-64
-    if: ${{ github.event.pull_request.draft == false }}
+    needs: 
+      - linux-extensions-64
+      - check-draft
+    if: ${{ needs.check-draft.outputs.is_draft == 'false' }}
 
     strategy:
       fail-fast: false
@@ -145,7 +157,8 @@ jobs:
  linux-extensions-64:
     # Builds extensions for linux_amd64
     name: Linux Extensions (x64)
-    if: ${{ github.event.pull_request.draft == false }}
+    needs: check-draft
+    if: ${{ needs.check-draft.outputs.is_draft == 'false' }}
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -177,7 +190,6 @@ jobs:
 
  upload-linux-extensions-64:
     name: Upload Linux Extensions (x64)
-    if: ${{ github.event.pull_request.draft == false }}
     needs: linux-extensions-64
     strategy:
       matrix:
@@ -192,9 +204,11 @@ jobs:
  linux-extensions-64-musl:
     # Builds extensions for linux_amd64_musl
     name: Linux Extensions (musl + x64)
-    if: ${{ github.event.pull_request.draft == false }}
     runs-on: ubuntu-latest
-    needs: linux-extensions-64
+    needs: 
+      - linux-extensions-64
+      - check-draft
+    if: ${{ needs.check-draft.outputs.is_draft == 'false' }}
     strategy:
       matrix:
         duckdb_arch: [linux_amd64_musl]
@@ -224,7 +238,6 @@ jobs:
 
  upload-linux-extensions-64-musl:
     name: Upload Linux Extensions (musl + x64)
-    if: ${{ github.event.pull_request.draft == false }}
     needs: linux-extensions-64-musl
     strategy:
       matrix:
@@ -239,9 +252,11 @@ jobs:
  linux-extensions-64-aarch64:
     # Builds extensions for linux_arm64
     name: Linux Extensions (aarch64)
-    if: ${{ github.event.pull_request.draft == false }}
     runs-on: ubuntu-24.04-arm
-    needs: linux-extensions-64
+    needs: 
+      - linux-extensions-64
+      - check-draft
+    if: ${{ needs.check-draft.outputs.is_draft == 'false' }}
     strategy:
       matrix:
         duckdb_arch: [linux_arm64]
@@ -270,7 +285,6 @@ jobs:
  
  upload-linux-extensions-64-aarch64:
     name: Upload Linux Extensions (aarch64)
-    if: ${{ github.event.pull_request.draft == false }}
     needs: linux-extensions-64-aarch64
     strategy:
       matrix:
@@ -284,9 +298,9 @@ jobs:
           
  check-load-install-extensions:
     name: Checks extension entries
-    if: ${{ github.event.pull_request.draft == false && inputs.skip_tests != 'true' }}
     runs-on: ubuntu-22.04
     needs: linux-extensions-64
+    if: ${{ inputs.skip_tests != 'true' }}
     env:
       CC: gcc-10
       CXX: g++-10
@@ -355,10 +369,9 @@ jobs:
 
  symbol-leakage:
     name: Symbol Leakage
-    if: ${{ github.event.pull_request.draft == false && inputs.skip_tests != 'true' }}
     runs-on: ubuntu-22.04
     needs: linux-extensions-64
-
+    if: ${{ inputs.skip_tests != 'true' }}
     steps:
     - uses: actions/checkout@v3
       with:
@@ -385,7 +398,6 @@ jobs:
 
  linux-httpfs:
     name: Linux HTTPFS
-    if: ${{ github.event.pull_request.draft == false }}
     runs-on: ubuntu-22.04
     needs: linux-extensions-64
     env:
