--- a/.github/workflows/Main.yml
+++ b/.github/workflows/Main.yml
@@ -17,7 +17,7 @@ on:
       - '.github/config/out_of_tree_extensions.cmake'
   merge_group:
   pull_request:
-    types: [opened, reopened, ready_for_review]
+    types: [opened, reopened, ready_for_review, converted_to_draft]
     paths-ignore:
       - '**.md'
       - 'tools/**'
@@ -36,9 +36,20 @@ env:
   GH_TOKEN: ${{ secrets.GH_TOKEN }}
 
 jobs:
+ check-draft:
+    name: Don't trigger further jobs to run on draft PR
+    runs-on: ubuntu-24.04
+    outputs:
+      is_draft: ${{ steps.check-draft.outputs.is_draft }}
+    steps:
+    - id: check-draft
+      run: |
+        echo "is_draft=${{ github.event.pull_request.draft }}" >> $GITHUB_OUTPUT
+
  linux-debug:
     name: Linux Debug (${{ matrix.tag }})
-    if: ${{ github.event.pull_request.draft == false && !startsWith(github.ref, 'refs/tags/v') }}
+    needs: check-draft
+    if: ${{ needs.check-draft.outputs.is_draft == 'false' && !startsWith(github.ref, 'refs/tags/v') }}
     runs-on: ubuntu-22.04
     strategy:
       fail-fast: false
@@ -95,7 +106,8 @@ jobs:
 
  linux-release:
     name: Linux Release (full suite)
-    if: ${{ github.event.pull_request.draft == false }}
+    needs: check-draft
+    if: ${{ needs.check-draft.outputs.is_draft == 'false' }}
     runs-on: ubuntu-24.04
     env:
       GEN: ninja
@@ -126,7 +138,8 @@ jobs:
 
  force-storage:
     name: Force Storage
-    if: ${{ github.event.pull_request.draft == false && !startsWith(github.ref, 'refs/tags/v') }}
+    needs: check-draft
+    if: ${{ needs.check-draft.outputs.is_draft == 'false' && !startsWith(github.ref, 'refs/tags/v') }}
     runs-on: ubuntu-22.04
     env:
       CC: gcc-10
@@ -164,9 +177,9 @@ jobs:
 
  force-restart:
     name: Force Restart
-    if: ${{ github.event.pull_request.draft == false && !startsWith(github.ref, 'refs/tags/v') }}
     runs-on: ubuntu-22.04
     needs: force-storage
+    if: ${{ !startsWith(github.ref, 'refs/tags/v') }}
     env:
       CC: gcc-10
       CXX: g++-10
@@ -202,7 +215,6 @@ jobs:
 
  no-string-inline:
     name: No String Inline / Destroy Unpinned Blocks
-    if: ${{ github.event.pull_request.draft == false }}
     runs-on: ubuntu-24.04
     needs: force-storage
     env:
@@ -240,7 +252,6 @@ jobs:
 
  prefetch-all-parquet-files:
    name: Prefetch All Parquet Files
-   if: ${{ github.event.pull_request.draft == false }}
    runs-on: ubuntu-24.04
    needs: force-storage
    env:
@@ -274,7 +285,6 @@ jobs:
 
  vector-sizes:
     name: Vector Sizes
-    if: ${{ github.event.pull_request.draft == false }}
     runs-on: ubuntu-22.04
     needs: force-storage
     env:
@@ -318,9 +328,9 @@ jobs:
 
  valgrind:
     name: Valgrind
-    if: ${{ github.event.pull_request.draft == false && !startsWith(github.ref, 'refs/tags/v') }}
     runs-on: ubuntu-24.04
     needs: force-storage
+    if: ${{ !startsWith(github.ref, 'refs/tags/v') }}
     env:
       CC: clang
       CXX: clang++
@@ -356,7 +366,6 @@ jobs:
 
  vector-verification:
     name: Vector Verification Tests
-    if: ${{ github.event.pull_request.draft == false }}
     needs: force-storage
     runs-on: ubuntu-22.04
     env:
@@ -419,7 +428,6 @@ jobs:
 
  latest-storage:
     name: Latest Storage
-    if: ${{ github.event.pull_request.draft == false }}
     needs: force-storage
     runs-on: ubuntu-22.04
     env:
@@ -454,7 +462,6 @@ jobs:
 
  threadsan:
     name: Thread Sanitizer
-    if: ${{ github.event.pull_request.draft == false }}
     needs: force-storage
     runs-on: ubuntu-24.04
     env:
@@ -498,8 +505,9 @@ jobs:
 
  amalgamation-tests:
     name: Amalgamation Tests
-    if: ${{ github.event.pull_request.draft == false }}
     runs-on: ubuntu-22.04
+    needs: check-draft
+    if: ${{ needs.check-draft.outputs.is_draft == 'false' }}
     env:
       CC: clang
       CXX: clang++
