--- a/.github/workflows/Regression.yml
+++ b/.github/workflows/Regression.yml
@@ -50,17 +50,11 @@ jobs:
   check-draft:
     name: Don't trigger further jobs to run on draft PR
     runs-on: ubuntu-24.04
-    outputs:
-      is_draft: ${{ steps.check-draft.outputs.is_draft }}
-    steps:
-    - id: check-draft
-      run: |
-        echo "is_draft=${{ github.event.pull_request.draft }}" >> $GITHUB_OUTPUT
+    if: github.event.pull_request.draft == false
 
   regression-test-benchmark-runner:
     name: Regression Tests
     needs: check-draft
-    if: ${{ needs.check-draft.outputs.is_draft == 'false' }}
     runs-on: ubuntu-22.04
     env:
       CC: gcc-10
@@ -199,7 +193,6 @@ jobs:
   regression-test-storage:
     name: Storage Size Regression Test
     needs: check-draft
-    if: ${{ needs.check-draft.outputs.is_draft == 'false' }}
     runs-on: ubuntu-22.04
     env:
       CC: gcc-10
@@ -281,7 +274,6 @@ jobs:
   regression-test-binary-size:
     name: Regression test binary size
     needs: check-draft
-    if: ${{ needs.check-draft.outputs.is_draft == 'false' }}
     runs-on: ubuntu-22.04
     env:
       CC: gcc-10
@@ -325,7 +317,6 @@ jobs:
   regression-test-plan-cost:
     name: Regression Test Join Order Plan Cost
     needs: check-draft
-    if: ${{ needs.check-draft.outputs.is_draft == 'false' }}
     runs-on: ubuntu-22.04
     env:
       CC: gcc-10
