--- a/.github/workflows/Swift.yml
+++ b/.github/workflows/Swift.yml
@@ -39,17 +39,11 @@ jobs:
   check-draft:
     name: Don't trigger further jobs to run on draft PR
     runs-on: ubuntu-24.04
-    outputs:
-      is_draft: ${{ steps.check-draft.outputs.is_draft }}
-    steps:
-    - id: check-draft
-      run: |
-        echo "is_draft=${{ github.event.pull_request.draft }}" >> $GITHUB_OUTPUT
+    if: github.event.pull_request.draft == false
 
   test-apple-platforms:
     name: Test Apple Platforms
     needs: check-draft
-    if: ${{ needs.check-draft.outputs.is_draft == 'false' }}
     strategy:
       matrix:
         # destinations need to match selected version of Xcode
