--- a/.github/workflows/CodeQuality.yml
+++ b/.github/workflows/CodeQuality.yml
@@ -43,7 +43,9 @@ jobs:
     name: Don't trigger further jobs to run on draft PR
     runs-on: ubuntu-24.04
     if: github.event.pull_request.draft == false
-
+    steps:
+      - run: echo ${{ github.event.pull_request.draft }}
+      
   format-check:
     name: Format Check
     runs-on: ubuntu-22.04
