--- a/.github/workflows/Main.yml
+++ b/.github/workflows/Main.yml
@@ -40,7 +40,9 @@ jobs:
     name: Don't trigger further jobs to run on draft PR
     runs-on: ubuntu-24.04
     if: github.event.pull_request.draft == false
-
+    steps:
+      - run: echo ${{ github.event.pull_request.draft }}
+      
  linux-debug:
     name: Linux Debug (${{ matrix.tag }})
     needs: check-draft
