--- a/.github/workflows/Regression.yml
+++ b/.github/workflows/Regression.yml
@@ -51,7 +51,9 @@ jobs:
     name: Don't trigger further jobs to run on draft PR
     runs-on: ubuntu-24.04
     if: github.event.pull_request.draft == false
-
+    steps:
+      - run: echo ${{ github.event.pull_request.draft }}
+      
   regression-test-benchmark-runner:
     name: Regression Tests
     needs: check-draft
