--- a/.github/workflows/Windows.yml
+++ b/.github/workflows/Windows.yml
@@ -63,7 +63,9 @@ jobs:
     name: Don't trigger further jobs to run on draft PR
     runs-on: ubuntu-24.04
     if: github.event.pull_request.draft == false
-
+    steps:
+      - run: echo ${{ github.event.pull_request.draft }}
+      
  win-release-64:
     # Builds binaries for windows_amd64
     name: Windows (64 Bit)
