--- a/.github/workflows/Julia.yml
+++ b/.github/workflows/Julia.yml
@@ -39,7 +39,7 @@ jobs:
   check-draft:
     name: Don't trigger further jobs to run on draft PR
     runs-on: ubuntu-24.04
-    if: github.event.pull_request.draft == false
+    if: github.event.pull_request.draft == false || !github.event_name.pull_request
     steps:
       - run: echo ${{ github.event.pull_request.draft }}
       
