--- a/.github/workflows/Regression.yml
+++ b/.github/workflows/Regression.yml
@@ -26,7 +26,7 @@ on:
       - '.github/config/out_of_tree_extensions.cmake'
   merge_group:
   pull_request:
-    types: [opened, reopened, ready_for_review]
+    types: [opened, reopened, ready_for_review, converted_to_draft]
     paths-ignore:
       - '**.md'
       - 'test/configs/**'
@@ -50,7 +50,7 @@ jobs:
   check-draft:
     name: Don't trigger further jobs to run on draft PR
     runs-on: ubuntu-24.04
-    if: github.event.pull_request.draft == false || !github.event_name.pull_request
+    if: github.event_name != 'pull_request' || github.event.pull_request.draft == false
     steps:
       - run: echo ${{ github.event.pull_request.draft }}
       
