--- a/.github/workflows/LinuxRelease.yml
+++ b/.github/workflows/LinuxRelease.yml
@@ -376,6 +376,7 @@ jobs:
   with:
     runs_on: ${{ matrix.config.runs_on }}
     duckdb_arch: ${{ matrix.config.duckdb_arch }}
+    run_id: ${{ github.run_id }}
     duckdb_binary: ${{ matrix.config.duckdb_binary }}
     nightly_build: 'linux'
     branch: ${{ github.ref_name }}
