--- a/.github/workflows/Windows.yml
+++ b/.github/workflows/Windows.yml
@@ -385,6 +385,7 @@ jobs:
     runs_on: ${{ matrix.config.runs_on }}
     duckdb_arch: ${{ matrix.config.duckdb_arch }}
     duckdb_binary: ${{ matrix.config.duckdb_binary }}
+    run_id: ${{ github.run_id }}
     nightly_build: 'windows'
     branch: ${{ github.ref_name }}
 
