comment paths-ignore to test

--- a/.github/workflows/CodeQuality.yml
+++ b/.github/workflows/CodeQuality.yml
@@ -1,5 +1,6 @@
 name: CodeQuality
 on:
+  workflow_call:
   workflow_dispatch:
     inputs:
       explicit_checks:
@@ -11,25 +12,25 @@ on:
       - 'main'
       - 'feature'
       - 'v*.*-*'
-    paths-ignore:
-      - '**.md'
-      - 'test/configs/**'
-      - '.github/patches/duckdb-wasm/**'
-      - '.github/workflows/**'
-      - '!.github/workflows/lcov_exclude'
-      - '!.github/workflows/CodeQuality.yml'
-      - '.github/config/out_of_tree_extensions.cmake'
+    # paths-ignore:
+    #   - '**.md'
+    #   - 'test/configs/**'
+    #   - '.github/patches/duckdb-wasm/**'
+    #   - '.github/workflows/**'
+    #   - '!.github/workflows/lcov_exclude'
+    #   - '!.github/workflows/CodeQuality.yml'
+    #   - '.github/config/out_of_tree_extensions.cmake'
   merge_group:
   pull_request:
     types: [opened, reopened, ready_for_review, converted_to_draft]
-    paths-ignore:
-      - '**.md'
-      - 'test/configs/**'
-      - '.github/patches/duckdb-wasm/**'
-      - '.github/workflows/**'
-      - '!.github/workflows/lcov_exclude'
-      - '!.github/workflows/CodeQuality.yml'
-      - '.github/config/out_of_tree_extensions.cmake'
+    # paths-ignore:
+    #   - '**.md'
+    #   - 'test/configs/**'
+    #   - '.github/patches/duckdb-wasm/**'
+    #   - '.github/workflows/**'
+    #   - '!.github/workflows/lcov_exclude'
+    #   - '!.github/workflows/CodeQuality.yml'
+    #   - '.github/config/out_of_tree_extensions.cmake'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}-${{ github.head_ref || '' }}-${{ github.base_ref || '' }}-${{ github.ref != 'refs/heads/main' || github.sha }}
