--- a/.github/workflows/Julia.yml
+++ b/.github/workflows/Julia.yml
@@ -1,5 +1,6 @@
 name: Julia
 on:
+  workflow_call:
   workflow_dispatch:
   repository_dispatch:
   push:
@@ -7,29 +8,29 @@ on:
       - 'main'
       - 'feature'
       - 'v*.*-*'
-    paths-ignore:
-      - '**.md'
-      - 'examples/**'
-      - 'test/**'
-      - 'tools/**'
-      - '!tools/juliapkg/**'
-      - '.github/patches/duckdb-wasm/**'
-      - '.github/workflows/**'
-      - '!.github/workflows/Julia.yml'
-      - '.github/config/out_of_tree_extensions.cmake'
+    # paths-ignore:
+    #   - '**.md'
+    #   - 'examples/**'
+    #   - 'test/**'
+    #   - 'tools/**'
+    #   - '!tools/juliapkg/**'
+    #   - '.github/patches/duckdb-wasm/**'
+    #   - '.github/workflows/**'
+    #   - '!.github/workflows/Julia.yml'
+    #   - '.github/config/out_of_tree_extensions.cmake'
   merge_group:
   pull_request:
     types: [opened, reopened, ready_for_review, converted_to_draft]
-    paths-ignore:
-      - '**.md'
-      - 'examples/**'
-      - 'test/**'
-      - 'tools/**'
-      - '!tools/juliapkg/**'
-      - '.github/patches/duckdb-wasm/**'
-      - '.github/workflows/**'
-      - '!.github/workflows/Julia.yml'
-      - '.github/config/out_of_tree_extensions.cmake'
+    # paths-ignore:
+    #   - '**.md'
+    #   - 'examples/**'
+    #   - 'test/**'
+    #   - 'tools/**'
+    #   - '!tools/juliapkg/**'
+    #   - '.github/patches/duckdb-wasm/**'
+    #   - '.github/workflows/**'
+    #   - '!.github/workflows/Julia.yml'
+    #   - '.github/config/out_of_tree_extensions.cmake'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}-${{ github.head_ref || '' }}-${{ github.base_ref || '' }}-${{ github.ref != 'refs/heads/main' || github.sha }}
