--- a/.github/workflows/OnPullRequest.yml
+++ b/.github/workflows/OnPullRequest.yml
@@ -29,6 +29,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           path: 'duckdb/duckdb'
+          ref: 'rearrange-ci'
           fetch-depth: 0
       
       - id: ci-filters
