comment out some triggers

--- a/.github/workflows/CodeQuality.yml
+++ b/.github/workflows/CodeQuality.yml
@@ -7,11 +7,11 @@ on:
         description: 'Pass which checks to run or remain empty for default checks'
         type: string
   repository_dispatch:
-  push:
-    branches-ignore:
-      - 'main'
-      - 'feature'
-      - 'v*.*-*'
+  # push:
+  #   branches-ignore:
+  #     - 'main'
+  #     - 'feature'
+  #     - 'v*.*-*'
     # paths-ignore:
     #   - '**.md'
     #   - 'test/configs/**'
@@ -21,8 +21,8 @@ on:
     #   - '!.github/workflows/CodeQuality.yml'
     #   - '.github/config/out_of_tree_extensions.cmake'
   merge_group:
-  pull_request:
-    types: [opened, reopened, ready_for_review, converted_to_draft]
+  # pull_request:
+  #   types: [opened, reopened, ready_for_review, converted_to_draft]
     # paths-ignore:
     #   - '**.md'
     #   - 'test/configs/**'
@@ -40,18 +40,18 @@ env:
   GH_TOKEN: ${{ secrets.GH_TOKEN }}
 
 jobs:
-  check-draft:
-    # We run all other jobs on PRs only if they are not draft PR
-    if: github.event_name != 'pull_request' || github.event.pull_request.draft == false
-    runs-on: ubuntu-24.04
-    steps:
-      - name: Preliminary checks on CI 
-        run: echo "Event name is ${{ github.event_name }}"
+  # check-draft:
+  #   # We run all other jobs on PRs only if they are not draft PR
+  #   if: github.event_name != 'pull_request' || github.event.pull_request.draft == false
+  #   runs-on: ubuntu-24.04
+  #   steps:
+  #     - name: Preliminary checks on CI 
+  #       run: echo "Event name is ${{ github.event_name }}"
 
   format-check:
     name: Format Check
     runs-on: ubuntu-22.04
-    needs: check-draft
+    # needs: check-draft
     env:
       CC: gcc-10
       CXX: g++-10
