--- a/.github/workflows/Julia.yml
+++ b/.github/workflows/Julia.yml
@@ -3,11 +3,11 @@ on:
   workflow_call:
   workflow_dispatch:
   repository_dispatch:
-  push:
-    branches-ignore:
-      - 'main'
-      - 'feature'
-      - 'v*.*-*'
+  # push:
+  #   branches-ignore:
+  #     - 'main'
+  #     - 'feature'
+  #     - 'v*.*-*'
     # paths-ignore:
     #   - '**.md'
     #   - 'examples/**'
@@ -19,8 +19,8 @@ on:
     #   - '!.github/workflows/Julia.yml'
     #   - '.github/config/out_of_tree_extensions.cmake'
   merge_group:
-  pull_request:
-    types: [opened, reopened, ready_for_review, converted_to_draft]
+  # pull_request:
+  #   types: [opened, reopened, ready_for_review, converted_to_draft]
     # paths-ignore:
     #   - '**.md'
     #   - 'examples/**'
@@ -37,17 +37,17 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  check-draft:
-    # We run all other jobs on PRs only if they are not draft PR
-    if: github.event_name != 'pull_request' || github.event.pull_request.draft == false
-    runs-on: ubuntu-24.04
-    steps:
-      - name: Preliminary checks on CI 
-        run: echo "Event name is ${{ github.event_name }}"
+  # check-draft:
+  #   # We run all other jobs on PRs only if they are not draft PR
+  #   if: github.event_name != 'pull_request' || github.event.pull_request.draft == false
+  #   runs-on: ubuntu-24.04
+  #   steps:
+  #     - name: Preliminary checks on CI 
+  #       run: echo "Event name is ${{ github.event_name }}"
       
   format_check:
     name: Julia Format Check
-    needs: check-draft
+    # needs: check-draft
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -68,7 +68,7 @@ jobs:
 
   main_julia:
     name: Julia ${{ matrix.version }}
-    needs: check-draft
+    # needs: check-draft
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
