--- a/.github/workflows/OnPullRequest.yml
+++ b/.github/workflows/OnPullRequest.yml
@@ -26,6 +26,9 @@ jobs:
       - name: Preliminary checks on CI 
         run: echo "Event name is ${{ github.event_name }}"
 
+      - name: Install dependencies
+        run: pip install PyGithub
+
       - uses: actions/checkout@v4
         with:
           ref: 'rearrange-ci'
